Fix arrow position on mobile

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -80,7 +80,7 @@ body {
     }
 
     .arrow {
-      bottom: 10px;
+      bottom: 40px;
       width: 20px;
       height: 20px;
       background: url(../images/icons/arrow_down_dark.png) 0 0 no-repeat;
